# ember

./: Cargo.toml  README.md
src/: agent.rs  app.rs  lib.rs  main.rs  ollama.rs  tools.rs  ui.rs
tests/: ollama_test.rs
