[package]
name = "ember"
version = "0.1.0"
edition = "2024"
description = "A terminal chat client and lightweight coding agent for local Ollama models."
license = "MIT"
authors = ["Promilek"]
repository = "https://github.com/pawel2jarzembowski-oss/ember"

[dependencies]
ratatui = "0.28"
crossterm = { version = "0.28", features = ["event-stream"] }
tokio = { version = "1", features = ["rt-multi-thread", "macros", "sync", "time", "net", "io-util"] }
reqwest = { version = "0.12", default-features = false, features = ["json", "stream", "rustls-tls"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
anyhow = "1"
futures-util = "0.3"
